[package]
name = "interfacer"
version = "0.0.2"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "SDK builder for various API"
repository = "https://github.com/Hexilee/interfacer"
keywords = ["SDK-Builder"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/interfacer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
