[package]
name = "interfacer-http"
version = "0.1.7"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A magic HTTP client, like retrofit in Java"
repository = "https://github.com/Hexilee/interfacer-http"
keywords = ["http", "client", "interfacer"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
documentation = "https://docs.rs/interfacer-http"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "interfacer-http-attribute",
    "interfacer-http-hyper",
    "interfacer-http-util",
]

[patch."https://github.com/tokio-rs/tokio"]
tokio = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }
tokio-executor = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }
tokio-io = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }
tokio-reactor = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }
tokio-sync = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }
tokio-tcp = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }
tokio-threadpool = { git = "https://github.com/tokio-rs/tokio.git", rev = "73102760cfe1632b6b8073dfa5a506c0e69e4b5e" }

[dependencies]
interfacer-http-attribute = { path = "interfacer-http-attribute", version = "0.1" }
interfacer-http-util = { path = "interfacer-http-util", version = "0.1" }
failure = "0.1"
failure_derive = "0.1"

serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "0.13", optional = true }
serde_urlencoded = { version = "0.6", optional = true }
serde-xml-rs = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true }
lib-encoding = { package = "encoding", version = "0.2", optional = true }
unhtml = { version = "0.6", optional = true }

# for test
serde_derive = { version = "1.0", optional = true }
unhtml_derive = { version = "0.5", optional = true }

[features]
encoding = ["lib-encoding"]
serde-base = ["serde"]
serde-json = ["serde_json"]
serde-msgpack = ["rmp-serde"]
serde-urlencoded = ["serde_urlencoded"]
serde-xml = ["serde-xml-rs"]
serde-full = ["serde", "serde_json", "rmp-serde", "serde_urlencoded", "serde-xml-rs"]
unhtml-html = ["unhtml"]

# only for test
derive = ["serde_derive", "unhtml_derive"]

[[test]]
name = "http-service"
path = "proc-macro-tests/http_service.rs"
edition = "2018"
required-features = ["derive"]