[package]
name = "interfacer-http-attribute"
version = "0.1.5"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "proc macro for interfacer-http"
repository = "https://github.com/Hexilee/interfacer-http"
keywords = ["http", "client", "interfacer"]
categories = ["network-programming", "web-programming::http-client"]
readme = "../README.md"
documentation = "https://docs.rs/interfacer-http-attribute"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn-next = { version = "1.0.0-rc4", features = ["full", "visit-mut"]}
proc-macro2-next = "1.0.0-rc3"
quote-next = "1.0.0-rc3"
regex = "1.2"
lazy_static = "1.3"
interfacer-http-util = { path = "../interfacer-http-util", version = "0.1" }

[lib]
proc-macro = true
