[package]
name = "interfacer-http-attribute"
version = "0.2.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "proc macro for interfacer-http"
repository = "https://github.com/Hexilee/interfacer-http"
keywords = ["http", "client", "interfacer"]
categories = ["network-programming", "web-programming::http-client"]
readme = "../README.md"
documentation = "https://docs.rs/interfacer-http-attribute"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut"]}
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.2"
lazy_static = "1.3"
http = "0.1"
mime = "0.3"

[lib]
proc-macro = true
