[package]
name = "interfacer-http-hyper"
version = "0.1.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "hyper based http-service for interfacer-http"
repository = "https://github.com/Hexilee/interfacer-http"
keywords = ["http", "client", "interfacer"]
categories = ["network-programming", "web-programming::http-client"]
readme = "../README.md"
documentation = "https://docs.rs/interfacer-http-hyper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
http = "0.1"
failure = "0.1"
failure_derive = "0.1"
interfacer-http = { path = "..", version = "0.1" }
