[package]
name = "interfacer-http-hyper"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "hyper based http-service for interfacer-http"
repository = "https://github.com/Hexilee/interfacer-http"
keywords = ["http", "client", "interfacer"]
categories = ["network-programming", "web-programming::http-client"]
readme = "../README.md"
documentation = "https://docs.rs/interfacer-http-hyper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.15"
hyper = "0.13.0-alpha.1"
interfacer-http = { path = "..", version = "0.2" }
