[package]
name = "interfacer-http"
version = "0.0.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "SDK builder for HTTP API, like retrofit"
repository = "https://github.com/Hexilee/interfacer"
keywords = ["SDK-Builder"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/interfacer-http"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "interfacer-http-attribute",
    "interfacer-http-hyper",
    "interfacer-http-service",
]

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }

[dependencies]
interfacer-http-attribute = { path = "interfacer-http-attribute", version = "0.0" }
interfacer-http-hyper = { path = "interfacer-http-hyper", version = "0.0" }
interfacer-http-service = { path = "interfacer-http-service", version = "0.0" }