[package]
name = "interfacer-http"
version = "0.0.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "SDK builder for HTTP API, like retrofit"
repository = "https://github.com/Hexilee/interfacer"
keywords = ["SDK-Builder"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/interfacer-http"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "interfacer-http-attribute",
    "interfacer-http-hyper",
    "interfacer-http-util",
]

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
tokio-io = { git = "https://github.com/tokio-rs/tokio", branch = "master" }

[dependencies]
interfacer-http-attribute = { path = "interfacer-http-attribute", version = "0.0" }
interfacer-http-util = { path = "interfacer-http-util", version = "0.0" }
failure = "0.1"
failure_derive = "0.1"

serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
encoding = { version = "0.2", optional = true }

[features]
encode = ["encoding"]
serde-json = ["serde", "serde_json"]
serde-full = ["serde", "serde_json"]

[[test]]
name = "tests"
path = "tests/lib.rs"