[package]
name = "interfacer-http"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"
license = "MIT"
description = "SDK builder for HTTP API, like retrofit"
repository = "https://github.com/Hexilee/interfacer"
keywords = ["SDK-Builder"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/interfacer-http"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "interfacer-http-attribute",
    "interfacer-http-hyper",
    "interfacer-http-util",
]

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
tokio-io = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
syn-next = { git = "https://github.com/dtolnay/syn", branch = "master"}
proc-macro2-next = { git = "https://github.com/alexcrichton/proc-macro2", branch = "next" }
quote-next = { git = "https://github.com/dtolnay/quote" }
const-concat = { git = "https://github.com/Vurich/const-concat", branch = "master" }

[dependencies]
interfacer-http-attribute = { path = "interfacer-http-attribute", version = "0.1" }
interfacer-http-util = { path = "interfacer-http-util", version = "0.1" }
failure = "0.1"
failure_derive = "0.1"

serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "0.13", optional = true }
serde_urlencoded = { version = "0.5", optional = true }
serde-xml-rs = { version = "0.3", optional = true }
serde = { version = "1.0", optional = true }
encoding = { version = "0.2", optional = true }
unhtml = { version = "0.6", optional = true }

# for test
serde_derive = { version = "1.0", optional = true }
unhtml_derive = { version = "0.5", optional = true }

[features]
encode = ["encoding"]
serde-base = ["serde"]
serde-json = ["serde_json"]
serde-msgpack = ["rmp-serde"]
serde-urlencoded = ["serde_urlencoded"]
serde-xml = ["serde-xml-rs"]
serde-full = ["serde", "serde_json", "rmp-serde", "serde_urlencoded", "serde-xml-rs"]
unhtml-html = ["unhtml"]

# only for test
derive = ["serde_derive", "unhtml_derive"]

[[test]]
name = "http-service"
path = "proc-macro-tests/http_service.rs"
edition = "2018"
required-features = ["derive"]