[package]
name = "interfacer-http-attribute"
version = "0.0.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"
syn = { version = "0.15", features = ["full", "visit-mut"] }
interfacer-http-util = { path = "../interfacer-http-util", version = "0.0" }

[lib]
proc-macro = true
