[package]
name = "interfacer-http-hyper"
version = "0.0.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0-a.0"

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
