[package]
name = "interfacer-http-hyper"
version = "0.0.1"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0-a.0"
http = "0.1"
failure = "0.1"
failure_derive = "0.1"
interfacer-http = { path = "..", version = "0.0" }
