[package]
name = "interfacer-http-util"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1"
cookie = "0.12"
async-trait = "0.1.2"
futures-preview = "0.3.0-alpha.17"
url = "1.7"
const-concat = { version = "0.1.0"}
